tests/fixtures/errors/e0303_reset_in_repeat.mimz
// expect: E0303
module M {
  out y: bits[4]
  repeat i: 0..4 {
    reset rs
    y[i] = 0
  }
}
